# LatticeGreensFunctions

./: .gitignore  LICENSE  README.md
LatticeGreensFunctions_arb/: README.md  pyproject.toml
LatticeGreensFunctions_arb/src/LatticeGreensFunctions_arb/: Data.py  G0.py  InitializeDataStructures.py  LatticeGreensFunctions.c  LatticeGreensFunctions.h  LatticeGreensFunctions.i  LatticeGreensFunctions.py  LatticeGreensFunctions_wrap.c  Makefile  NumPy_Array_From_Pointers.py  __init__.py
LatticeGreensFunctions_arb/src/LatticeGreensFunctions_arb/AllocationFunctions/: AllocationFunctions.c~  AllocationFunctions.h  AllocationFunctions.i  AllocationFunctions.py  AllocationFunctions_wrap.c  NumPy_Wrappers.i  __init__.py  __init__.py~  makefile  makefile~
LatticeGreensFunctions_mpmath/: LICENSE  README.md  pyproject.toml
LatticeGreensFunctions_mpmath/src/LatticeGreensFunctions_mpmath/: G0Functions.py  __init__.py
docs/.ipynb_checkpoints/: GreenFunctionTests-checkpoint.ipynb
